fixed code contrast once again ...

--- a/themes/hello-friend-ng/assets/scss/_main.scss
+++ b/themes/hello-friend-ng/assets/scss/_main.scss
@@ -263,24 +263,7 @@ pre {
     padding: 0;
     font-size: inherit;
 
-    // Default
-    color: #ccc;
-
-    @media (prefers-color-scheme: dark) {
-      color: inherit;
-    }
-
-    @media (prefers-color-scheme: light) {
-      color: #ccc;
-    }
-
-    [data-theme=dark] & {
-      color: inherit;
-    }
-
-    [data-theme=light] & {
-      color: #inherit;
-    }
+    color: inherit;
   }
 }
 
